add competencies
