# config/routes.rb
@@ -4,4 +4,5 @@ Rails.application.routes.draw do
   get "up" => "rails/health#show", as: :rails_health_check
   resources :authors
   resources :courses
+  resources :competencies
 end
